# yams-symspell

./: .clang-format  .clangd  LICENSE  README.md  meson.build
benchmarks/: meson.build  symspell_bench.cpp
include/symspell/: result.hpp  symspell.hpp  symspell_sqlite.hpp
scripts/: check-quality.sh  format-code.sh
src/: symspell_sqlite.cpp
tests/: meson.build  symspell_test.cpp
